# birdclef-2026

./: .gitignore  Justfile  README.md  pyproject.toml
notebooks/: kernel-metadata.json  submission.ipynb  submission_attn_sed.ipynb
notebooks/lib/: kernel-metadata.json  lib.ipynb
notebooks/test-lib/: kernel-metadata.json  test_lib.ipynb
notebooks/test-wheels/: kernel-metadata.json  test_wheels.ipynb
notebooks/wheels/: kernel-metadata.json  wheels.ipynb
scripts/: lr_sweep.sh  test_hierarchical_prior.py  tune_bayes_sigmas.py
src/birdclef_2026/: app.py
src/birdclef_2026/data/: dataset.py  loaders.py  transforms.py
src/birdclef_2026/data/preparation/: memmap.py  perch_embeddings.py
src/birdclef_2026/experiments/: baseline.py
src/birdclef_2026/experiments/attn_sed/: __init__.py  model.py  trainer.py
src/birdclef_2026/experiments/baseline/: __init__.py  losses.py  metrics.py  model.py  trainer.py
src/birdclef_2026/experiments/finetune/: __init__.py
src/birdclef_2026/experiments/perch_mlp/: __init__.py  (+1 more)
submission/deps_nnaudio/: kernel-metadata.json
submission/perch_speed_test/: kernel-metadata.json  perch_embed_speed_test.ipynb
submission/submission_attn_sed/: kernel-metadata.json  submission_attn_sed.ipynb
submission/submission_crazy_bayes/: kernel-metadata.json  submission_crazy_bayes.ipynb
submission/submission_perch_mlp/: kernel-metadata.json  submission_perch_mlp.ipynb
tests/: conftest.py
tests/data/: test_datasets.py  test_loaders.py  test_transforms.py
tests/data/preparation/: test_pipeline.py
tests/experiments/: test_model.py
(+5 files in other folders)
