[project]
name = "birdclef-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.5",
    "nnaudio>=0.3.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchvision>=0.25.0",
    "wm",
    "zarr>=3.1.5",
]

[project.scripts]
birdclef = "birdclef_2026.app:app.cli"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.wm]
volume = "birdclef-2026-processed"
data_mount = "/data"
timeout = 7200
wandb_secret = "wandb-secret"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.uv.sources]
wm = { git = "https://github.com/josh-gree/wm.git" }
